<resources>
    <string name="app_name">UniversitySocialNetwork</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- String para el menu principal -->
    <string name="unfollow_friends">DEJAR DE SEGUIR</string>
    <string name="last_comment_my_group">Mis últimos Comentarios en Grupos</string>
    <string name="my_last_post">Mis últimas Publicaciones</string>

    <!-- String para el menu de la cabecera (6 puntos) -->
    <string name="action_settings">Settings</string>
    <string name="action_profile">Mi Perfil</string>
    <string name="action_friends">Mis Amigos</string>
    <string name="action_groups">Mis Grupos</string>
    <string name="action_exit">Cerrar Sesión</string>
    <string name="action_new_post">Nueva Publicación</string>
    <string name="action_new_group_friend">Nuevo Grupo/Amigo</string>

    <!-- String para el fragment Nueva Publicación -->
    <string name="new_publication">NUEVA PUBLICACIÓN</string>
    <string name="texto_about">¿Sobre qué quieres hablar?</string>
    <string name="boton_publicar">Publicar</string>

    <!-- String para la Pantalla Amigos -->
    <string name="my_friends">MIS AMIGOS</string>
    <string name="news_friends">Añadir nuevo...</string>

    <!-- String para la Pantalla Grupos -->
    <string name="my_groups">MIS GRUPOS</string>
    <string name="btn_news_groups">AÑADIR NUEVO GRUPO</string>
    <string name="groups_suggested">Grupos Sugeridos</string>
    <string name="create_group">CREAR GRUPO</string>
    <string name="btn_upload_image">SUBIR IMAGEN</string>

    <!-- String para la Pantalla Login-Registro -->
    <string name="tvUser">USUARIO:</string>
    <string name="tvPassword">CONTRASEÑA:</string>
    <string name="btnSession">ENTRAR</string>
    <string name="btnRegistro">REGISTRATE</string>
    <string name="university_social_network">University Social Network</string>
    <string name="registrate_ahora">Registrate Ahora</string>
    <string name="no_tienes_cuenta_todav_a">¿No tienes cuenta?</string>
    <string name="tvDescription">Tu Aplicación Para no Perderte en la Jungla de la Universidad</string>
    <string name="tvPassword2">REPITE CONTRASEÑA</string>
    <string name="tvNombre">NOMBRE</string>
    <string name="tvApellidos">APELLIDOS</string>
    <string name="tvEmail">EMAIL</string>
    <string name="tvTelefono">TELEFONO</string>
    <string name="tvVolver">¿Tienes cuenta? Identifícate</string>
    <string name="tvImagen">Selecciona una foto de perfil:</string>

    <!-- String para la pantalla nueva publicación-->
    <string name="tvNewPublication">Añadir Nueva Publicación</string>

    <!-- Direcciones de api rest -->
    <string name="ws_login">http://192.168.183.86:22175/RedSocial-war/api/redsocial/login</string>
    <string name="ws_refeshUser">http://192.168.183.86:22175/RedSocial-war/api/redsocial/refreshuser</string>
    <string name="ws_addFriend">http://192.168.183.86:22175/RedSocial-war/api/redsocial/addfriend</string>
    <string name="ws_addFriendByEmail">http://192.168.183.86:22175/RedSocial-war/api/redsocial/addfriendemail</string>
    <string name="ws_deleteFriend">http://192.168.183.86:22175/RedSocial-war/api/redsocial/deletefriend</string>


    <string name="ws_suggestion">http://192.168.183.86:22175/RedSocial-war/api/redsocial/getsuggested</string>
    <string name="ws_safe_post">http://192.168.183.86:22175/RedSocial-war/api/post/newpost</string>
    <string name="ws_register">http://192.168.183.86:22175/RedSocial-war/api/redsocial/register</string>
    <string name="ws_create_group">http://192.168.183.86:22175/RedSocial-war/api/groups/creategroup</string>
    <string name="ws_follow_group">http://192.168.183.86:22175/RedSocial-war/api/groups/followgroup</string>

    <string name="error_conexion">Error al conectar</string>

    <!-- KEYS para acceder valores de los bundle -->
    <string name="key_userLogged">userLogged</string>
    <string name="key_suggestion">friendSuggestion</string>
    <string name="key_friendSelected">friendSelected</string>
    <string name="key_groupSelected">groupSelected</string>

    <string name="key_sharedPref">SharedPref</string>
    <string name="key_emailUserLogged">spEmailUserLogged</string>
    <string name="key_passwordUserLogged">spPasswordUserLogged</string>



</resources>
