<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/action_profile"
        android:orderInCategory="110"
        android:title="@string/action_profile" />
    <item
        android:id="@+id/action_friends"
        android:orderInCategory="120"
        android:title="@string/action_friends" />
    <item
        android:id="@+id/action_groups"
        android:orderInCategory="130"
        android:title="@string/action_groups" />
    <item
        android:id="@+id/action_new_post"
        android:orderInCategory="140"
        android:title="@string/action_new_post" />
    <item
        android:id="@+id/action_new_group_friend"
        android:orderInCategory="150"
        android:title="@string/action_new_group_friend" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="160"
        android:title="@string/action_exit" />


</menu>
