<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="30dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/jirafa"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/university_social_network"
        android:textAlignment="center"
        android:textColor="@color/letra"
        android:textSize="30sp"
        android:paddingBottom="30dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Fondo"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/login"
            android:textAlignment="center"
            android:text="@string/tvDescription"
            android:padding="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvUser"
            android:textColor="@color/letra"
            android:textSize="@dimen/login"
            android:layout_below="@id/tvDescripcion" />

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvUsuario"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/tvContraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etUsuario"
            android:text="@string/tvPassword"
            android:textColor="@color/letra"
            android:textSize="@dimen/login" />

        <EditText
            android:id="@+id/etContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvContraseña"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnSession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etContraseña"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/btnSession"
            android:textColor="@color/letra"
            android:textSize="@dimen/login" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:padding="8dp"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvPregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnSession"
            android:layout_marginTop="14dp"
            android:text="@string/no_tienes_cuenta_todav_a"
            android:textColor="@color/letra"
            android:textSize="@dimen/login2" />

        <TextView
            android:id="@+id/btnRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnSession"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/tvPregunta"
            android:text="@string/registrate_ahora"
            android:textColor="@color/Boton"
            android:textSize="@dimen/login2" />

    </RelativeLayout>


</LinearLayout>

