<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margen_general">

    <TextView
        android:id="@+id/tvNewPublication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_publication"
        android:textSize="@dimen/tamano_texto_principal"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_about"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margen_superior" />

    <EditText
        android:id="@+id/etPublication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="@dimen/margen_superior" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_superior" />

    <Button
        android:id="@+id/btnNewPublication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_superior"
        android:background="@color/colorPrimary"
        android:text="@string/boton_publicar"
        android:textSize="@dimen/tamano_texto_boton" />


</LinearLayout>