<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/etSearchFriends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Crear nuevo Grupo" />

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etSearchFriends"
            android:text="@string/btn_upload_image"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorFondoIcono"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:gravity="center" />

        <Button
            android:id="@+id/crear_grupo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btnUpload"
            android:layout_below="@id/etSearchFriends"
            android:text="@string/create_group"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorFondoIcono"
            android:padding="5dp"
            android:layout_margin="5dp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/groups_suggested"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvSuggested"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>


</LinearLayout>